fix(Mobile header): Broken z-index

--- a/src/styles/organisms/_po_head-nav.scss
+++ b/src/styles/organisms/_po_head-nav.scss
@@ -163,7 +163,7 @@
       position: fixed;
       top: 0;
       left: 2vw;
-      z-index: 1;
+      z-index: 10;
       align-items: center;
       flex-direction: column;
       justify-content: center;
